update 49 smith corona sterling

--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -98,8 +98,8 @@
 							<p><img src="http://www.dersche.id/assets/img/typewriters/missingthumbnail.jpg" alt="1947 Remington Rand Noiseless 7" style="width:150px;"></p>
 						</li>
 						<li>
-							<strong>1949 Smith Corona Sterling </strong><a href="http://www.dersche.id/typewriters/1939SmithCoronaSterling.html"><font size="1">more...</font></a>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/missingthumbnail.jpg" alt="1949 Remington All New" style="width:150px;"></p>
+							<strong>1949 Smith Corona Sterling </strong><a href="http://www.dersche.id/typewriters/1949SmithCoronaSterling.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1949SmithCoronaSterling.jpg" alt="1949 Smith Corona Sterling" style="width:150px;"></p>
 						</li>
 						<li>
 							<strong>1949 Remington All New </strong><a href="http://www.dersche.id/typewriters/1949RemingtonAllNew.html"><font size="1">more...</font></a>
