--- a/typewriters/1949CoronaSterling.html
+++ b/typewriters/1949CoronaSterling.html
@@ -24,7 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1949 Corona Sterling</h3>
+            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1949 Smith Corona Sterling</h3>
         </div>
     </section>
     <!--HOME SECTION END-->
@@ -32,20 +32,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1949CoronaSterling/front.jpg" alt="1949 Corona Sterling Front" style="width:500px;"></center></p>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1949SmithCoronaSterling/front.jpg" alt="1949 Smith Corona Sterling Front" style="width:500px;"></center></p>
 					<hr>
 					<p><strong>Year:</strong> 1949
-					<p><strong>Make:</strong> Corona
+					<p><strong>Make:</strong> Smith Corona
 					<p><strong>Model:</strong> Sterling
 					<p><strong>S/N:</strong> 5A198091
 					<p>Text will go here.
 					<p>More text will go here.
 					<center>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1949CoronaSterling/rtilt.jpg" alt="1949 Corona Sterling Right Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1949CoronaSterling/ltilt.jpg" alt="1949 Corona Sterling Left Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1949CoronaSterling/right.jpg" alt="1949 Corona Sterling Right" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1949CoronaSterling/left.jpg" alt="1949 Corona Sterling Left" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1949CoronaSterling/back.jpg" alt="1949 Corona Sterling Back" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1949SmithCoronaSterling/rtilt.jpg" alt="1949 Smith Corona Sterling Right Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1949SmithCoronaSterling/ltilt.jpg" alt="1949 Smith Corona Sterling Left Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1949SmithCoronaSterling/right.jpg" alt="1949 Smith Corona Sterling Right" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1949SmithCoronaSterling/left.jpg" alt="1949 Smith Corona Sterling Left" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1949SmithCoronaSterling/back.jpg" alt="1949 Smith Corona Sterling Back" style="width:500px;"></p>
 					</center>
                 </div>
             </div>
