--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@ permalink: /404.html
 		<center>
 			<h1>Error 404</h1>
 			<h3>Oh dear... we can't find that page, so we thought we would take you to this page instead.</h3>
-			<p>If you believe you have reached this page in error, please contact the administrator at <a href="01001110.01101111.00100000.01100101.01001101.01100001.01101001.01101100.html">this email</a>.</p>
+			<p>If you believe you have reached this page in error, please contact the administrator at <a href="http://www.dersche.id/eMailNotFoundError.html">this email</a>.</p>
 			<p>Please click <a href="http://www.dersche.id/index.html">here</a> to redirect you back to the home page.</p>
 	</body>
 </html>
