--- a/eMailNotFoundError.html
+++ b/eMailNotFoundError.html
@@ -6,7 +6,7 @@
 		<center>
 			<h1>Error 01001110 01101111 00100000 01100101 01001101 01100001 01101001 01101100</h1>
 			<h3>Oh dear... there is currently no administrator eMail.</h3>
-			<p>If you believe you have reached this page in error, please contact the administrator at <a href="01001110.01101111.00100000.01100101.01001101.01100001.01101001.01101100.html">this email</a>.</p>
+			<p>If you believe you have reached this page in error, please contact the administrator at <a href="http://www.dersche.id/eMailNotFoundError.html">this email</a>.</p>
 			<p>Please click <a href="http://www.dersche.id/index.html"> to redirect you back to the home page.</p>
 	</body>
 </html>
