update 36 corona standard 2

--- a/typewriters/1936CoronaStandard2.html
+++ b/typewriters/1936CoronaStandard2.html
@@ -34,10 +34,10 @@
                 <div class="col-md-12" style="min-height:800px;">
 					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard2/front.jpg" alt="1936 Corona Standard Front" style="width:500px;"></center></p>
 					<hr>
-					<p><strong>Year:</strong> 19XX
-					<p><strong>Make:</strong> Make
-					<p><strong>Model:</strong> Model
-					<p><strong>S/N:</strong> AB-123456
+					<p><strong>Year:</strong> 1936
+					<p><strong>Make:</strong> Corona
+					<p><strong>Model:</strong> Standard
+					<p><strong>S/N:</strong> 
 					<p>Text will go here.
 					<p>More text will go here.
 					<center>
