Add more typewriters

--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -50,6 +50,10 @@
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1925CoronaFour/thumbnail.jpg" alt="1925 Corona Four" style="width:150px;"></p>
 						</li>
 						<li>
+							<strong>1925 Woodstock 5 </strong><a href="http://www.dersche.id/typewriters/1925Woodstock5.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1925Woodstock5/thumbnail.jpg" alt="1925 Woodstock 5" style="width:150px;"></p>
+						</li>
+						<li>
 							<strong>1925 Remington Portable </strong><a href="http://www.dersche.id/typewriters/1925RemingtonPortable.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1925RemingtonPortable/thumbnail.jpg" alt="1925 Remington Portable" style="width:150px;"></p>
 						</li>
@@ -62,12 +66,24 @@
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/thumbnail.jpg" alt="1926 Remington Portable" style="width:150px;"></p>
 						</li>
 						<li>
+							<strong>1926 Royal 10 </strong><a href="http://www.dersche.id/typewriters/1926Royal10.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1926Royal10/thumbnail.jpg" alt="1926 Royal 10" style="width:150px;"></p>
+						</li>
+						<li>
 							<strong>1927 Bing 2 </strong><a href="http://www.dersche.id/typewriters/1927Bing2.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/thumbnail.jpg" alt="1927 Bing 2" style="width:150px;"></p>
 						</li>
 						<li>
+							<strong>1927 Remington 12 </strong><a href="http://www.dersche.id/typewriters/1927Remington12.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1927Remington12/thumbnail.jpg" alt="1927 Remington 12" style="width:150px;"></p>
+						</li>
+						<li>
 							<strong>1927 Royal P </strong><a href="http://www.dersche.id/typewriters/1927RoyalP.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/thumbnail.jpg" alt="1927 Royal P" style="width:150px;"></p>
+						</li>
+						<li>
+							<strong>1931 Royal 10 </strong><a href="http://www.dersche.id/typewriters/1931Royal10.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1931Royal10/thumbnail.jpg" alt="1931 Royal 10" style="width:150px;"></p>
 						</li>
 						<li>
 							<strong>1936 Corona Standard </strong><a href="http://www.dersche.id/typewriters/1936CoronaStandard.html"><font size="1">more...</font></a>
@@ -76,6 +92,10 @@
 						<li>
 							<strong>1936 Corona Standard </strong><a href="http://www.dersche.id/typewriters/1936CoronaStandard2.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard2/thumbnail.jpg" alt="1936 Corona Standard" style="width:150px;"></p>
+						</li>
+						<li>
+							<strong>1938 Royal 10 </strong><a href="http://www.dersche.id/typewriters/1938Royal10.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1938Royal10/thumbnail.jpg" alt="1938 Royal 10" style="width:150px;"></p>
 						</li>
 						<li>
 							<strong>1939 Corona Standard </strong><a href="http://www.dersche.id/typewriters/1939CoronaStandard.html"><font size="1">more...</font></a>
@@ -110,6 +130,10 @@
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1952SmithCoronaSilent/thumbnail.jpg" alt="1952 Smith Corona Silent" style="width:150px;"></p>
 						</li>
 						<li>
+							<strong>1953 Royal HH </strong><a href="http://www.dersche.id/typewriters/1953RoyalHH.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/thumbnail.jpg" alt="1953 Royal HH" style="width:150px;"></p>
+						</li>
+						<li>
 							<strong>1954 Halberg Traveler </strong><a href="http://www.dersche.id/typewriters/1954HalbergTraveler.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/thumbnail.jpg" alt="1954 Halberg Traveler" style="width:150px;"></p>
 						</li>
@@ -126,6 +150,10 @@
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1957UnderwoodStar/thumbnail.jpg" alt="1957 Underwood Star" style="width:150px;"></p>
 						</li>
 						<li>
+							<strong>1958 Olympia SG1 De Luxe </strong><a href="http://www.dersche.id/typewriters/1958OlympiaSG1DeLuxe.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1958OlympiaSG1DeLuxe/thumbnail.jpg" alt="1958 Olympia SG1 De Luxe" style="width:150px;"></p>
+						</li>
+						<li>
 							<strong>1962 Royal Futura 800 </strong><a href="http://www.dersche.id/typewriters/1962RoyalFutura800.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1962RoyalFutura800/thumbnail.jpg" alt="1962 Royal Futura 800" style="width:150px;"></p>
 						</li>
@@ -140,81 +168,6 @@
 						<li>
 							<strong>1974(?) AN-UGC74A(V)3 Military Teletypewriter </strong><a href="http://www.dersche.id/typewriters/teletype.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/teletype/thumbnail.jpg" alt="1974 AN-UGC74A(V)3 Military Teletypewriter" style="width:150px;"></p>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
 						</li>
 					</ol>
 					<hr>
