--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -27,7 +27,7 @@
 			<div class="row">
 				<div class="col-md-12" style="min-height:800px;">
 					<br>
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/Corona3Sepia.jpg" alt="Corona 3 Sepia" style="width:500px;"></center></p>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/CoronaFourSepia.jpg" alt="1926 Corona Four Sepia" style="width:500px;"></center></p>
 					<hr>
 					<div class="alert alert-info" >
 						This list is probably in chronological order of the date of manufacture, but no guarantees are made.
