--- a/typewriterOtherInfo.html
+++ b/typewriterOtherInfo.html
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="col-md-12">
 					<br>
-					<br>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1939CoronaSterlingSepia.jpg" alt="1939 Corona Sterling Sepia" style="width:500px;"></center></p>
 					<hr>
                     <p>
 						
