--- a/stanton.html
+++ b/stanton.html
@@ -68,7 +68,65 @@
 					Homer Boardman, of Nevada, Hon. O. D. Boardman, of Des Moines, Trustee A. B. Shaw and wife, of Corning, Trustee C. F. 
 					Saylor, of Des Moines, Judge Stevens and wife of Boone, Dr. Fairchild, wife and daughters, of Clinton, Mr. and Mrs. 
 					Hardin, of Eldora and Mrs. Macomber, of Des Moines.
-					<p>
+					<p>Gen. Lincoln, and Professors Jas, Wilson, Bissell, Ford, and Doolittle were appointed by Dr. Beardshear as committee 
+					on arrangements and carried out their work very successfully. Gen. Lincoln was given the entire management of the 
+					ceremonies and performed his work with characteristic ability and thoroughness. Forming a background to the casket, 
+					which was itself covered with cut flowers, were a large variety of floral designs among which were a large cross given 
+					by the faculty. The Gates Ajar, a tribute from the P. E. O. society, a large boquet of white roses, white lilies, and 
+					ferns and also a pillow from the Cliolian Literary Society, a star from the Bachelor society, a pillow from the 
+					Y. W. C. A., a wreath from the firm of Biglow & Smith, a harp of pink roses from Mr. and Mrs. Brown, of Des Moines, 
+					together with a profusion of cut flowers, offered by the students and other friends of the family. Unfortunately the 
+					flowers ordered from Chicago by the Cresent Society and by some of the classes did not arrive in time.
+					<p>Dr. Wynn delivered the discourse which was followed by a very appropriate address from President Beardshear. The 
+					singing by the college choir was beautiful and impressive as was also Miss Westermann's voluntary. Miss Chambers sang 
+					as a solo that beautiful hymn, Lead Kindly Light, very sweetly.
+					<p>Arriving at the cemetery the students formed a circle around the relatives, faculty, choir and P. E. O. society. The 
+					grave had been very beautifully lined by the P. E. O's. Dr. Beardshear read a short burial service, after which the 
+					P. E. O's. sang their Closing Ode and their chaplain offered the beautiful prayer from their ritual. The choir sang 
+					"The Beautiful Land" and then the large throng walked slowly and sadly back to the college.
+					<br>
+					<br>
+					<u>DR. BEARDSHEAR'S ADDRESS.</u>
+					<br>
+					<p>My Friends:--In attempting to address you upon this occasion I fear lest my words may be too few or too many. The 
+					memories of other days and scenes together with a full consciousness of an irreparable and abiding loss may urge 
+					one's sympathies to the thwarting of thought and due expression. Should words be given they may not be 
+					fraighted with love, esteem, and truth adequate to the character and memory of her who reigns supreme in our affection. 
+					Though language is experienced with life's weightiest sorrows and richest loves, and with God;s fullest thought to man; 
+					yet when of a dear one the golden bowl is broken and the silver cord is loosed our words sink to the earth under the burden 
+					of our pierced love and growing loss.
+					<p>It is an interesting study of our lives to observe the characterful impression, of serious events both private and public. 
+					They often take the rarest hue of earth and sky. On last Thursday evening at the time of our beloved friend's departure for 
+					the good home in the skies, there was a remarkable spactacle of nature. To the north-ward there was the fiercest thunder cloud 
+					storm vivified with the intensest and frequentest lightnings that I have observed for many a day. North-ward with the storm 
+					was destruction and death, but to the west-ward was the clear sky, sealed with heaven's own blue. The new moon and evening 
+					star vied with each other in a silent beauty and a prophetic cheer which with the peculiar back-ground and environment 
+					clothed nature with an unusual awe. Theses strikingly companion scenes under the consciousness of our great loss made upon 
+					me a profound and helpful impression. In the north there was maddening lightning, coldness and death, but even above the 
+					hidden sun in the west there was light, prophecy, fidelity and cheer. These nature pictures express our mingled emotions this 
+					hour, but the life, faith, character, and good-bye messages of our departed friend lead us unmistakably, even amid the gloom 
+					of our loss, to place emphasis upon the hope and the promise of the picture in the western sky.
+					<p>What a day of mingled life, sacred emotion and happy surprise is that of birth in a home! Such a day was Oct. 22nd. 1845 in 
+					the home of Mr. and Mrs. James McDonald, of New Concord, Ohio, when a girl child came from heaven to earth to bless them and 
+					destined to brighten the lives of many others in years to come. They named her Margaret, a name soon to become a poem of truest 
+					memories and riches beneficences to friends and loved ones. Her childhood had the fortunate setting of a christian home. The 
+					teachings of that early life entered into her character with a heaven-born sway. Who but the recording angel can know the pages 
+					in the book of our earlier years. The words, the kindnesses, the plays, the mother-hood, the father-hood, the providences, 
+					human and divine, make, to the thoughtful, a collect of extraordinary interest and worth. Whatever our conception as to our 
+					derivative parental endowments, we instantly feel a truth in the poem of Wordsworth:<br>
+					<p>"Our birth is but a sleep and a forgetting:<br>The sould that rises with us, our life's star,<br>Hath had elsewhere it's setting,
+					<br>And cometh from afar:<br>Not in entire forgetfulness,<br>And not in utter nakeness,<br>But trailing clouds of glory do we come.<br>
+					From God, who is our home,<br>Heaven lies about us in our infancy.<br> * * * * I raise<br>The song of thanks and praise<br>
+					 * * * * * <br>For those first affections.<br>Those shadowy recollections,<br>Which be they what they may,<br>Are yet the fountain light 
+					 of all our day,<br>Are yet a master light of all our seeing."<br>
+					 <p>The childlife of our friend gave most pleasing expression of the truest forms and noblest embodiments of youthful life and 
+					 character. Her early years were placed on the border land of North and South in the evenful period of American history wherein the 
+					 great struggle of slavery was determining for a higher national purpose and life. The fierce discussions and early battles of 
+					 the war, only led her to a profounder love for humanity and a deeper trust in God.
+					 <p>The patriotic and humanitarian sentiments of that time became large motive powers in leading her to the Christian church, so 
+					 that at the age of sixteen, she identified herself with the Presbyterian church at Claysville, Ohio. This local church organization 
+					 had become characterized by its adherence to the freedom of man and the cause of the union. Her parents and she went some six miles 
+					 from home to be identified with the church, whose pastor, Rev. Matthew Miller, had become prominent in his words for the union.
                 </div>
             </div>
         </div>
