--- a/stanton.html
+++ b/stanton.html
@@ -35,7 +35,7 @@
                 <div class="col-md-12" style="min-height:800px;">
                     <div class="alert alert-info" >
                         Margaret McDonald Stanton passed away on July 24, 1895. Both she and her husband, Edgar Stanton, were faculty 
-						members at Iowa College of Agriculture, now known as Iowa State University. Though tragic for the time, it is 
+						members at Iowa Agricultural College, now known as Iowa State University. Though tragic for the time, it is 
 						because of her passing that the I.S.U. campus is graced by the presence of the Edgar W. and Margaret MacDonald 
 						Stanton Memorial Carillon. The following article was originally printed in the July 30, 1895 
 						edition of the I.A.C. Student, the school paper at the time, and was transcribed in it's entirety by myself. 
