Add Pictures for Margaret Stanton

--- a/otherLanding.html
+++ b/otherLanding.html
@@ -9,7 +9,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>DERSCHE.id - Family Website</title>
+    <title>DERSCHE.id - Other Projects</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
      <!-- FONTAWESOME STYLE CSS -->
@@ -24,7 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3 >BLANK PAGE <i class="fa fa-angle-double-right "></i></h3>
+            <h3 >Other Projects <i class="fa fa-angle-double-right "></i></h3>
 
         </div>
     </section>
@@ -33,9 +33,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-                    <div class="alert alert-info" >
-                        This is the blank page that you can use to customize or add you content in this template. For more templates keep looking <a href="http://www.binarytheme.com" target="_blank"  >binarytheme.com</a>
-                    </div>
+                    <p><a href="http://www.dersche.id/stanton.html"><h3><strong>Margaret McDonald Stanton Memorial, I.A.C. Student, 1895</strong></h3></a>
+					This page contains a memorial to Margaret McDonald Stanton from the I.A.C. Student, which is now ISU Daily. The original content comes from the July 30, 1895 issue of the paper.
                 </div>
             </div>
         </div>
