--- a/stanton.html
+++ b/stanton.html
@@ -127,6 +127,24 @@
 					 that at the age of sixteen, she identified herself with the Presbyterian church at Claysville, Ohio. This local church organization 
 					 had become characterized by its adherence to the freedom of man and the cause of the union. Her parents and she went some six miles 
 					 from home to be identified with the church, whose pastor, Rev. Matthew Miller, had become prominent in his words for the union.
+					 
+					 <p><h3><strong>Original Scans from Microfilm</strong></h3>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/01.tif" alt="01" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/02.tif" alt="02" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/03.tif" alt="03" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/04.tif" alt="04" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/05.tif" alt="05" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/06.tif" alt="06" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/07.tif" alt="07" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/08.tif" alt="08" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/09.tif" alt="09" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/10.tif" alt="10" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/11.tif" alt="11" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/12.tif" alt="12" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/13.tif" alt="13" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/14.tif" alt="14" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/15.tif" alt="15" style="width:500px;"></center></p>
+					 <p><center><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/16.tif" alt="16" style="width:500px;"></center></p>
                 </div>
             </div>
         </div>
