--- a/recordLanding.html
+++ b/recordLanding.html
@@ -24,7 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3 >BLANK PAGE <i class="fa fa-angle-double-right "></i></h3>
+            <h3 >RECORDS <i class="fa fa-angle-double-right "></i></h3>
 
         </div>
     </section>
