--- a/stanton.html
+++ b/stanton.html
@@ -130,22 +130,25 @@
 					 <br>
 					 <br>
 					 <p><h3><strong><u>Original Scans from Microfilm</u></strong></h3>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/01.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/01.tif" alt="01" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/02.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/02.tif" alt="02" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/03.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/03.tif" alt="03" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/04.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/04.tif" alt="04" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/05.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/05.tif" alt="05" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/06.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/06.tif" alt="06" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/07.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/07.tif" alt="07" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/08.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/08.tif" alt="08" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/09.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/09.tif" alt="09" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/10.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/10.tif" alt="10" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/11.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/11.tif" alt="11" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/12.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/12.tif" alt="12" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/13.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/13.tif" alt="13" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/14.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/14.tif" alt="14" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/15.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/15.tif" alt="15" style="width:500px;"></a></center></p>
-					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/16.tif"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/16.tif" alt="16" style="width:500px;"></a></center></p>
+					 <div class="alert alert-info" >
+                        I take no ownership of the scans below. They were scanned by myself during my ongoing research at the Iowa State University Archives, located in the Parks Library on campus.
+                    </div>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/01.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/01.png" alt="01" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/02.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/02.png" alt="02" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/03.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/03.png" alt="03" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/04.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/04.png" alt="04" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/05.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/05.png" alt="05" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/06.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/06.png" alt="06" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/07.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/07.png" alt="07" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/08.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/08.png" alt="08" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/09.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/09.png" alt="09" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/10.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/10.png" alt="10" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/11.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/11.png" alt="11" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/12.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/12.png" alt="12" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/13.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/13.png" alt="13" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/14.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/14.png" alt="14" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/15.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/15.png" alt="15" style="width:500px;"></a></center></p>
+					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/16.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/16.png" alt="16" style="width:500px;"></a></center></p>
                 </div>
             </div>
         </div>
