Update Stanton Further

--- a/stanton.html
+++ b/stanton.html
@@ -130,9 +130,13 @@
 					 <br>
 					 <br>
 					 <p><h3><strong><u>Original Scans from Microfilm</u></strong></h3>
+					 <p><h5>Please click on the below images to view in higher resolution (1920x1484).</h5></p>
+					 <br>
 					 <div class="alert alert-info" >
                         I take no ownership of the scans below. They were scanned by myself during my ongoing research at the Iowa State University Archives, located in the Parks Library on campus.
                     </div>
+					<br>
+					<br>
 					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/01.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/01.png" alt="01" style="width:500px;"></a></center></p>
 					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/02.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/02.png" alt="02" style="width:500px;"></a></center></p>
 					 <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/03.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/03.png" alt="03" style="width:500px;"></a></center></p>
