--- a/recordLanding.html
+++ b/recordLanding.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <script src="http://www.w3schools.com/lib/w3data.js"></script>
 <head>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="" />
@@ -24,7 +25,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3 >RECORDS <i class="fa fa-angle-double-right "></i></h3>
+            <h3 >RECORDS  <i class="fa fa-angle-double-right "></i></h3>
 
         </div>
     </section>
