Add / Update Coronas!
Added red 1927 Corona Four.
Replaced old photos w/ new for 1918 Corona 3, 1925 Corona Four, and 1936
Corona Standard.

--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -70,6 +70,10 @@
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1926Royal10/thumbnail.jpg" alt="1926 Royal 10" style="width:150px;"></p>
 						</li>
 						<li>
+							<strong>1927 Corona Four </strong><a href="http://www.dersche.id/typewriters/1927CoronaFour.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1927CoronaFour/thumbnail.jpg" alt="1927 Corona Four" style="width:150px;"></p>
+						</li>
+						<li>
 							<strong>1927 Bing 2 </strong><a href="http://www.dersche.id/typewriters/1927Bing2.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/thumbnail.jpg" alt="1927 Bing 2" style="width:150px;"></p>
 						</li>
