--- a/typewriters/1925CoronaFour.html
+++ b/typewriters/1925CoronaFour.html
@@ -46,6 +46,8 @@
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1925CoronaFour/right.jpg" alt="1925 Corona Four Right" style="width:500px;"></p>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1925CoronaFour/left.jpg" alt="1925 Corona Four Left" style="width:500px;"></p>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1925CoronaFour/back.jpg" alt="1925 Corona Four Back" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1925CoronaFour/ears.jpg" alt="1925 Corona Four Ears" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1925CoronaFour/dealer.jpg" alt="1925 Corona Four Dealer Decal" style="width:500px;"></p>
 					</center>
                 </div>
             </div>
