--- a/typewriters/1927CoronaFour.html
+++ b/typewriters/1927CoronaFour.html
@@ -24,7 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1918 Corona 3</h3>
+            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1927 Corona Four</h3>
         </div>
     </section>
     <!--HOME SECTION END-->
@@ -32,23 +32,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/front.jpg" alt="1918 Corona 3 Front" style="width:500px;"></center></p>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1927CoronaFour/front.jpg" alt="1927 Corona Four Front" style="width:500px;"></center></p>
 					<hr>
-					<p><strong>Year:</strong> 1918
+					<p><strong>Year:</strong> 1927
 					<p><strong>Make:</strong> Corona
-					<p><strong>Model:</strong> 3
-					<p><strong>S/N:</strong> 150301
+					<p><strong>Model:</strong> Four
+					<p><strong>S/N:</strong> S6L09761
 					<p>Text will go here.
 					<p>More text will go here.
 					<center>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/rtilt.jpg" alt="1918 Corona 3 Right Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/ltilt.jpg" alt="1918 Corona 3 Left Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/right.jpg" alt="1918 Corona 3 Right" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/left.jpg" alt="1918 Corona 3 Left" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/back.jpg" alt="1918 Corona 3 Back" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/closed.jpg" alt="1918 Corona 3 Closed" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/ears.jpg" alt="1918 Corona 3 Ears" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/dealer.jpg" alt="1918 Corona 3 Dealer Decal" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1927CoronaFour/rtilt.jpg" alt="1927 Corona Four Right Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1927CoronaFour/ltilt.jpg" alt="1927 Corona Four Left Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1927CoronaFour/right.jpg" alt="1927 Corona Four Right" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1927CoronaFour/left.jpg" alt="1927 Corona Four Left" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1927CoronaFour/back.jpg" alt="1927 Corona Four Back" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1927CoronaFour/ears.jpg" alt="1927 Corona Four Ears" style="width:500px;"></p>
 					</center>
                 </div>
             </div>
