Update some images

--- a/typewriterWishList.html
+++ b/typewriterWishList.html
@@ -27,7 +27,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<br>
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/CoronaStandardSepia.jpg" alt="1936 Corona Standard Sepia" style="width:500px;"></center></p>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/CoronaStandardBW.jpg" alt="1936 Corona Standard Black & White" style="width:500px;"></center></p>
 					<hr>
 					<div class="alert alert-info" >
 						This is a list of the typewriters on my wishlist. If you might be able to help me check one off, let me know! You can email me using the contact page.
