--- a/typewriterLanding.html
+++ b/typewriterLanding.html
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/Corona3Sepia.jpg" alt="1918 Corona 3 Sepia" style="width:500px;"></center></p>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/Corona3BW.jpg" alt="1918 Corona 3 Black & White" style="width:500px;"></center></p>
 					<hr>
                     <p>
 						Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
