--- a/typewriterLanding.html
+++ b/typewriterLanding.html
@@ -29,12 +29,14 @@
 					<p><center><img src="http://www.dersche.id/assets/img/typewriters/Corona3BW.jpg" alt="1918 Corona 3 Black & White" style="width:500px;"></center></p>
 					<hr>
                     <p>
-						Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
-                        A list of his collection with pictures and descriptions can be found below.
+						I have been collecting typewriters since June of 2012. Currently, my collection consists of somewhere around 40 different machines. 
+						A list of my collection with pictures and descriptions can be found below, as well as a more in depth list <a href="http://www.dersche.id/TypewriterCollection.html">here. 
+						I think it goes without saying that Corona is by far my favorite brand of typewriter. Each image at the top of these typewriter pages is one of 
+						my prized Corona machines, edited to have that old time feel.
                     </p>
                     <p>
                         The list of my collection found on this site is not necessarily complete, and may not always be kept up to date. 
-						You can visit my gallery on the Typewriter Database by clicking <a href="http://typewriterdatabase.com/typewriters.php?hunter_search=943">here</a>. 
+						Please visit my gallery on the Typewriter Database by clicking <a href="http://typewriterdatabase.com/typewriters.php?hunter_search=943">here</a>. 
 						The Typewriter Database will likely always have a more up to date listing of my collection than this site, as that is where they are first uploaded.
 						However, I will do my best to keep this page updated as well.
                     </p>
