--- a/typewriterLanding.html
+++ b/typewriterLanding.html
@@ -30,7 +30,7 @@
 					<hr>
                     <p>
 						I have been collecting typewriters since June of 2012. Currently, my collection consists of somewhere around 40 different machines. 
-						A list of my collection with pictures and descriptions can be found below, as well as a more in depth list <a href="http://www.dersche.id/TypewriterCollection.html">here. 
+						A list of my collection with pictures and descriptions can be found below, as well as a more in depth list <a href="http://www.dersche.id/TypewriterCollection.html">here</a>. 
 						I think it goes without saying that Corona is by far my favorite brand of typewriter. Each image at the top of these typewriter pages is one of 
 						my prized Corona machines, edited to have that old time feel.
                     </p>
