--- a/Coronas.html
+++ b/Coronas.html
@@ -9,7 +9,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>DERSCHE.id - Family Website</title>
+    <title>Derscheid Typewriter Page - DERSCHE.id</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
      <!-- FONTAWESOME STYLE CSS -->
@@ -24,7 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3 >BLANK PAGE <i class="fa fa-angle-double-right "></i></h3>
+            <h3 >The Corona Page <i class="fa fa-angle-double-right "></i></h3>
 
         </div>
     </section>
@@ -34,7 +34,7 @@
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
                     <div class="alert alert-info" >
-                        This is the blank page that you can use to customize or add you content in this template. For more templates keep looking <a href="http://www.binarytheme.com" target="_blank"  >binarytheme.com</a>
+                        Welcome to the Corona Page! This page is dedicated to my personal favorite brand of typewriters: Corona, and later Smith Corona.
                     </div>
                 </div>
             </div>
