--- a/Coronas.html
+++ b/Coronas.html
@@ -18,7 +18,7 @@
     <link href="assets/css/style.css" rel="stylesheet" />
 </head>
 <body >
-	<div w3-include-html="http://www.dersche.id/includes/header.html"></div>
+	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
 	<script>
 		w3IncludeHTML();
 	</script>
