--- a/typewriterLanding.html
+++ b/typewriterLanding.html
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/Corona3BW.jpg" alt="1918 Corona 3 Black & White" style="width:500px;" border="5"></center></p>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/Corona3BW.jpg" alt="1918 Corona 3 Black & White" style="width:500px;" border="1px"></center></p>
 					<hr>
                     <p>
 						I have been collecting typewriters since June of 2012. Currently, my collection consists of somewhere around 40 different machines. 
@@ -43,14 +43,13 @@
                     <hr>
 					<center>
 						<div id="twdb1"> 
-    <object type="text/html" 
-	data="https://typewriterdatabase.com/typewriter_list_ajax.php?output=htm&css=1
-	&hunter_search=943
-	&collection_search=My+Collection" 
-	style="overflow:auto;border:1px solid black;width:300px;height:500px;background-color:#fff;">
-    </object>
-</div>
-
+							<object type="text/html" 
+								data="http://typewriterdatabase.com/typewriter_list_ajax.php?output=htm&css=1
+								&hunter_search=943 <!-- Your Member ID @TWDB -->
+								&collection_search=My+Collection" 
+								style="overflow:auto;border:1px solid black;width:300px;height:500px;background-color:#fff;">
+							</object>
+						</div>
 					</center>
 					<hr>
 				</div>
