--- a/typewriterLanding.html
+++ b/typewriterLanding.html
@@ -26,17 +26,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/Corona3BW.jpg" alt="1918 Corona 3 Black & White" style="width:500px;" border="1px"></center></p>
+					<p><center><img style="border:1px solid black;" src="http://www.dersche.id/assets/img/typewriters/Corona3BW.jpg" alt="1918 Corona 3 Black & White" style="width:500px;"></center></p>
 					<hr>
                     <p>
 						I have been collecting typewriters since June of 2012. Currently, my collection consists of somewhere around 40 different machines. 
-						A list of my collection with pictures and descriptions can be found below, as well as a more in depth list <a href="http://www.dersche.id/TypewriterCollection.html">here</a>. 
+						A list of my collection with pictures and descriptions can be found below, as well as a more in depth list <a href="http://www.dersche.id/typewriterCollection.html">here</a>. 
 						I think it goes without saying that Corona is by far my favorite brand of typewriter. Each image at the top of these typewriter pages is one of 
 						my prized Corona machines, edited to have that old time feel.
                     </p>
                     <p>
                         The list of my collection found on this site is not necessarily complete, and may not always be kept up to date. 
-						Please visit my gallery on the Typewriter Database by clicking <a href="http://typewriterdatabase.com/typewriters.php?hunter_search=943">here</a>. 
+						Please visit my gallery on the Typewriter Database by clicking <a href="http://typewriterdatabase.com/typewriters.php?hunter_search=943" target="_blank">here</a>. 
 						The Typewriter Database will likely always have a more up to date listing of my collection than this site, as that is where they are first uploaded.
 						However, I will do my best to keep this page updated as well.
                     </p>
