--- a/typewriterLanding.html
+++ b/typewriterLanding.html
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-					<p><center><img style="border:1px solid black;" src="http://www.dersche.id/assets/img/typewriters/Corona3BW.jpg" alt="1918 Corona 3 Black & White" style="width:500px;"></center></p>
+					<p><center><img style="width:500px; border:1px solid black;" src="http://www.dersche.id/assets/img/typewriters/Corona3BW.jpg" alt="1918 Corona 3 Black & White"></center></p>
 					<hr>
                     <p>
 						I have been collecting typewriters since June of 2012. Currently, my collection consists of somewhere around 40 different machines. 
