--- a/typewriterLanding.html
+++ b/typewriterLanding.html
@@ -43,13 +43,14 @@
                     <hr>
 					<center>
 						<div id="twdb1"> 
-							<object type="text/html" 
-								data="http://typewriterdatabase.com/typewriter_list_ajax.php?output=htm&css=1
-								&hunter_search=943 <!-- Your Member ID @TWDB -->
-								&collection_search=My+Collection" 
-								style="overflow:auto;border:1px solid black;width:300px;height:500px;background-color:#fff;">
-							</object>
-						</div>
+    <iframe 
+	src="https://typewriterdatabase.com/typewriter_list_ajax.php?output=htm&css=1
+	&hunter_search=943
+	&collection_search=My+Collection" 
+	style="overflow:auto;border:1px solid black;width:300px;height:500px;background-color:#fff;">
+    </iframe>
+</div>
+
 					</center>
 					<hr>
 				</div>
