--- a/typewriterLanding.html
+++ b/typewriterLanding.html
@@ -25,7 +25,7 @@
     <section id="intro">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12" padding-top:"150px">
 					<p><center><img style="width:500px; border:1px solid black;" src="http://www.dersche.id/assets/img/typewriters/Corona3BW__2.jpg" alt="1918 Corona 3 Black & White"></center></p>
 					<hr>
                     <p>
