--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -17,7 +17,7 @@
     <!-- CUSTOM STYLE CSS -->
     <link href="assets/css/style.css" rel="stylesheet" />
 </head>
-<body > 
+<body >
 	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
 	<script>
 		w3IncludeHTML();
@@ -25,9 +25,14 @@
 	<section id="typewriter-list">
 		<div class="container">
 			<div class="row">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
 				<div class="col-md-12" style="min-height:800px;">
 					<br>
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/CoronaFourBW.jpg" alt="1925 Corona Four Black & White" style="width:500px;"></center></p>
+					<p><center><img style="width:500px; border:1px solid black;" src="http://www.dersche.id/assets/img/typewriters/CoronaFourBW.jpg" alt="1925 Corona Four Black & White"></center></p>
 					<hr>
 					<div class="alert alert-info" >
 						This list is probably in chronological order of the date of manufacture, but no guarantees are made.
