--- a/typewriterOtherInfo.html
+++ b/typewriterOtherInfo.html
@@ -17,7 +17,7 @@
     <!-- CUSTOM STYLE CSS -->
     <link href="assets/css/style.css" rel="stylesheet" />
 </head>
-<body > 
+<body >
 	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
 	<script>
 		w3IncludeHTML();
@@ -25,12 +25,17 @@
     <section id="intro">
         <div class="container">
             <div class="row">
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
                 <div class="col-md-12">
 					<br>
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1939CoronaSterlingSepia.jpg" alt="1939 Corona Sterling Sepia" style="width:500px;"></center></p>
+					<p><center><img style="width:500px; border:1px solid black;" src="http://www.dersche.id/assets/img/typewriters/1939CoronaSterlingSepia.jpg" alt="1939 Corona Sterling Sepia"></center></p>
 					<hr>
                     <p>
-						
+
                     </p>
 					<hr>
 				</div>
