--- a/typewriterWishList.html
+++ b/typewriterWishList.html
@@ -17,7 +17,7 @@
     <!-- CUSTOM STYLE CSS -->
     <link href="assets/css/style.css" rel="stylesheet" />
 </head>
-<body > 
+<body >
 	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
 	<script>
 		w3IncludeHTML();
@@ -25,9 +25,14 @@
 	<section id="typewriter-list">
 		<div class="container">
 			<div class="row">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
 				<div class="col-md-12">
 					<br>
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/CoronaStandardBW.jpg" alt="1936 Corona Standard Black & White" style="width:500px;"></center></p>
+					<p><center><img style="width:500px; border:1px solid black;" src="http://www.dersche.id/assets/img/typewriters/CoronaStandardBW.jpg" alt="1936 Corona Standard Black & White"></center></p>
 					<hr>
 					<div class="alert alert-info" >
 						This is a list of the typewriters on my wishlist. If you might be able to help me check one off, let me know! You can email me using the contact page.
